@@ -15,6 +15,10 @@ Unix:
 
 - fixed compilation on systems with zlib installed but < 1.1.3 version
 
+wxGTK:
+
+- fixed wxMenu::Remove (John Skiff and Benjamin Williams)
+
 All:
 
 - Implemented GetEditControl for wxGenericTreeCtrl (Peter
